syntax = "proto3";

package proto;

option go_package = "github.com/msmkdenis/yap-infokeeper/internal/credit_card/api/grpchandlers/proto";

message PostCreditCardCredentialsRequest {
  string uuid = 1;
  string number = 2;
  string owner = 3;
  string expires_at = 4;
  string cvv_code = 5;
  string pin_code = 6;
  string metadata = 7;
}

message PostCreditCardCredentialsResponse {}

message CreditCardCredentials {
  string number = 1;
  string owner = 2;
  string expires_at = 3;
  string cvv_code = 4;
  string pin_code = 5;
  string metadata = 6;
}

message GetCreditCardRequest {
  string card_number = 1;
}

message GetCreditCardResponse {
  repeated CreditCardCredentials cards = 1;
}

service CreditCardService {
  rpc PostSaveCreditCard(PostCreditCardCredentialsRequest) returns (PostCreditCardCredentialsResponse);
  rpc GetLoadCreditCard(GetCreditCardRequest) returns (GetCreditCardResponse);
}